# snake_ds

./: .gitignore  CMakeLists.txt  README.md  main.c  prompt.md
.github/workflows/: release-notes.md  release.yml
scripts/: publish-release.sh
